# pr-agent

./: .gitignore  Makefile  pyproject.toml  requirements-dev.txt  setup.py
pr_agent/: __init__.py  cli.py  cli_pip.py  config_loader.py
pr_agent/agent/: __init__.py
pr_agent/agent/_transient-files/: 2025-05-05-agent.txt
pr_agent/algo/: __init__.py  cli_args.py  file_filter.py  git_patch_processing.py  language_handler.py  pr_processing.py  token_handler.py  types.py  utils.py
pr_agent/algo/_transient-files/: 2025-05-05-algo.txt
pr_agent/algo/ai_handlers/: base_ai_handler.py  langchain_ai_handler.py  litellm_ai_handler.py  openai_ai_handler.py
pr_agent/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_client.py  codecommit_provider.py  gerrit_provider.py  git_provider.py  github_provider.py  gitlab_provider.py  local_git_provider.py  utils.py
pr_agent/git_providers/_transient-files/: 2025-05-05-git_providers.txt
pr_agent/identity_providers/: __init__.py  default_identity_provider.py  identity_provider.py
pr_agent/identity_providers/_transient-files/: 2025-05-05-identity_providers.txt
pr_agent/log/: __init__.py
pr_agent/secret_providers/: __init__.py  google_cloud_storage_secret_provider.py  secret_provider.py
pr_agent/servers/: __init__.py  azuredevops_server_webhook.py  bitbucket_app.py  bitbucket_server_webhook.py  gerrit_server.py  github_action_runner.py  github_app.py  github_polling.py  gitlab_webhook.py  gunicorn_config.py  help.py  serverless.py  utils.py
pr_agent/tools/: __init__.py  pr_add_docs.py  pr_code_suggestions.py  pr_config.py  pr_description.py  pr_generate_labels.py  pr_help_docs.py  pr_help_message.py  pr_line_questions.py  pr_questions.py  pr_reviewer.py  pr_similar_issue.py  pr_update_changelog.py  ticket_pr_compliance_check.py
tests/e2e_tests/: e2e_utils.py  test_bitbucket_app.py  test_github_app.py  test_gitlab_webhook.py
tests/health_test/: main.py
tests/unittest/: test_azure_devops_parsing.py  test_bitbucket_provider.py  test_clip_tokens.py  test_codecommit_client.py  test_codecommit_provider.py  test_convert_to_markdown.py  test_delete_hunks.py  test_extend_patch.py  test_fetching_sub_issues.py  test_file_filter.py  test_find_line_number_of_relevant_line_in_file.py  test_fix_output.py  test_github_action_output.py  test_handle_patch_deletions.py  test_language_handler.py  test_load_yaml.py  test_parse_code_suggestion.py  test_try_fix_yaml.py
